# linux-helu

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  patch.py  run_sqlx.sh  start_postgres.sh  test_glib.rs
helu-cli/: Cargo.toml
helu-cli/src/: main.rs
helu-common/: Cargo.toml
helu-common/src/: dbus.rs  types.rs
helu-server/: Cargo.toml
helu-server/.sqlx/: query-039897741db2017328ebfd7bfef02ecde15a197761c47e72ff72971c580b52e8.json  query-0d10549dde84376c8a01d30bc6ef4c9bbe3282d90e9edcfdd5889007ecf1a492.json  query-2118508b1e9854dab3c628ecad28bc5ecf686331897f448e88d9e4bd85833796.json  query-26b692032512bfaed68746f1db8eb386188e2c07b39e94f32321004623cd59b2.json  query-39e6de111deccb276b3a6b98f69abf698b58f607e5d90b7861b6af1e612b18d2.json  query-3de230996817d8ceada26a0c9a5b7926cb59836d4d67bbb5aab1f3ff91008e85.json  query-aa5f355c98acfa4971d7fb89188e75b9645a9a0ddf6414942c2a2ffb53487e4a.json  query-b6da520650eae980132d10ca9377d19485d63c6d6b619b71e6df390af120cf91.json  query-c5ca21d21a48523572bc8e215d48551bcfe641531d505b878adc67dd69407990.json  query-cc7e8933936f23fd4a006ac12312d8aec4ba4cf9af6cc2326942fcc04c8af667.json
helu-server/migrations/: 001_initial.sql
helu-server/src/: config.rs  db.rs  dbus.rs  error.rs  main.rs  token.rs
helu-server/src/admin/: keys.rs  mod.rs  users.rs
helu-server/src/api/: enroll.rs  mod.rs
helu-server/src/auth/: apikey.rs  challenge.rs  direct.rs  jwt.rs  mod.rs
helu-server/src/middleware/: auth.rs
helu-setup/: package-lock.json  package.json
helu-setup/src/: App.svelte  app.css
helu-setup/src-tauri/: Cargo.toml  tauri.conf.json
helu-setup/src-tauri/src/: bridge.rs
helu-setup/src/lib/: Greeting.svelte  PinPad.svelte
helu-ui/: Cargo.toml  package-lock.json  package.json
helu-ui/src/: app.html  dbus.rs  main.rs  overlay.rs  pinpad.rs  ring.rs  style.css  window.rs
helu-ui/src-tauri/: Cargo.toml
helud/: Cargo.toml
helud/src/: config.rs  dbus.rs  main.rs
helud/src/auth/: face.rs  fido2.rs  fingerprint.rs  mod.rs  pin.rs
helud/src/crypto/: fallback.rs  mod.rs  store.rs  tpm.rs
helud/src/enrollment/: face.rs  fido2.rs  fingerprint.rs  mod.rs
helud/src/ml/: camera.rs  mod.rs  model.rs  pipeline.rs
linux-helu/: CLAUDE.md
linux-helu/helu-cli/: Cargo.toml
linux-helu/helu-server/src/: config.rs  token.rs
linux-helu/helu-server/src/api/: admin.rs  auth.rs
linux-helu/helu-ui/src-tauri/: tauri.conf.json
linux-helu/helud/: Cargo.toml
linux-helu/helud/src/: config.rs
linux-helu/helud/src/auth/: face.rs  fingerprint.rs  mod.rs
linux-helu/pam_helu/: Cargo.toml
pam_helu/: Cargo.toml
pam_helu/src/: dbus.rs  fallback.rs  lib.rs
pam_helu/tests/: integration.rs
scripts/: download-model.sh  install-user-service.sh
test_glib/: Cargo.toml
test_glib/src/: main.rs
(+2 files in other folders)
