[package]
name = "helu-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9.0", features = ["v4_12"] }
libadwaita = { version = "0.7.0", features = ["v1_4"] }
gtk4-layer-shell = "0.4.0"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
cairo-rs = "0.20"
helu-common = { path = "../helu-common" }
futures-lite = "2.6.1"
async-channel = "2.5.0"
