[package]
name = "helud"
version = "0.1.0"
description = "Linux Helu core daemon running on D-Bus"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
image = "0.25.10"
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", features = ["cuda", "tensorrt"] }
nokhwa = { version = "0.10", features = ["input-v4l", "output-threaded"] }
aes-gcm = "0.10"
rand = "0.8"
postcard = { version = "1.0", features = ["alloc", "use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tss-esapi = "7.6.0"
zbus = { version = "5.14.0", features = ["tokio"] }
ctap-hid-fido2 = "3.5.9"
futures = "0.3.31"
chrono = { version = "0.4.39", features = ["serde"] }
helu-common = { version = "0.1.0", path = "../helu-common" }
serde_json = "1"
