[package]
name = "pam_helu"
version = "0.1.0"
description = "C-compatible PAM library that forwards auth requests to helud"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zbus = { version = "5.14.0", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["full"] }
anyhow = "1.0"
pamsm = { version = "0.5.5", features = ["libpam"] }
helu-common = { path = "../helu-common" }
syslog = "6"
log = "0.4"
