[package]
name = "helud"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
image = "0.25.10"
ndarray = "0.17.2"
ort = "2.0.0-rc.12"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.1.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
zbus = { version = "5.14.0", features = ["tokio"] }
